--- a/BusBoard.Api/packages.config
+++ b/BusBoard.Api/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="13.0.2-beta1" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net472" />
   <package id="RestSharp" version="106.15.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
